Fix gap after experiment title [SCI-5486]

--- a/app/assets/stylesheets/experiments.scss
+++ b/app/assets/stylesheets/experiments.scss
@@ -86,7 +86,7 @@
             display: -webkit-box;
             height: 3em;
             -webkit-line-clamp: 2;
-            margin: .25em 1.75em;
+            margin: .25em 1.75em 0;
             overflow: hidden;
             text-overflow: ellipsis;
             width: 100%;
